--- a/portfolio.html
+++ b/portfolio.html
@@ -68,7 +68,7 @@
     <main>
       <section class="section">
         <div class="container">
-          <h1 class="section__title visually-hidden-title">Наши роботы</h1>
+          <h1 class="section__title visually-hidden">Наши роботы</h1>
           <ul class="filter">
             <li class="filter__item">
               <button class="filter__btn" type="button">Все</button>
