--- a/index.html
+++ b/index.html
@@ -56,7 +56,11 @@
           <ul class="contacts">
             <li class="contacts__item">
               <a class="contacts__link" href="mailto:info@devstudio.com">
-                <svg class="contacts__icon" width="14" height="10">
+                <svg
+                  class="contacts__icon icon-envelope"
+                  width="14"
+                  height="10"
+                >
                   <use href="./images/icons.svg#icon-envelope"></use>
                 </svg>
                 info@devstudio.com</a
@@ -65,7 +69,11 @@
 
             <li class="contacts__item">
               <a class="contacts__link" href="tel:+380961111111">
-                <svg class="contacts__icon" width="10" height="14">
+                <svg
+                  class="contacts__icon icon-smartphone"
+                  width="10"
+                  height="14"
+                >
                   <use href="./images/icons.svg#icon-smartphone"></use>
                 </svg>
                 +38 096 111 11 11</a
