fix-bugs in mobile-menu

--- a/portfolio.html
+++ b/portfolio.html
@@ -100,15 +100,13 @@
 
             <ul class="mobile-menu__list site-nav__list">
               <li class="mobile-menu__item site-nav__item">
-                <a
-                  class="mobile-menu__link site-nav__link current"
-                  href="./index.html"
+                <a class="mobile-menu__link site-nav__link" href="./index.html"
                   >Студия</a
                 >
               </li>
               <li class="mobile-menu__item site-nav__item">
                 <a
-                  class="mobile-menu__link site-nav__link"
+                  class="mobile-menu__link site-nav__link current"
                   href="./portfolio.html"
                   >Портфолио</a
                 >
